--- a/telegraf.conf
+++ b/telegraf.conf
@@ -256,10 +256,15 @@
 [[processors.converter]]
   order = 1
   [processors.converter.fields]
-    measurement = []
+    measurement = [""]
     tag = []
     string = []
     integer = ["device_id"]
     unsigned = []
     boolean = []
     float = ["loop_b_load_percentage","loop_a_load_percentage","cooling_water_return_temperature","chilled_water_supply_temperature"]
+[[inputs.mqtt_consumer.topic_parsing]]
+  topic = "/test/0/A"
+  measurement = "measurement/_/_"
+  [inputs.mqtt_consumer.topic_parsing.types]
+    test = "string"
