--- a/telegraf.conf
+++ b/telegraf.conf
@@ -264,7 +264,7 @@
     boolean = []
     float = ["loop_b_load_percentage","loop_a_load_percentage","cooling_water_return_temperature","chilled_water_supply_temperature"]
 [[inputs.mqtt_consumer.topic_parsing]]
-  topic = "/test/0/A"
+  topic = "test/0/A"
   measurement = "measurement/_/_"
   [inputs.mqtt_consumer.topic_parsing.types]
     test = "string"
