--- a/telegraf.conf
+++ b/telegraf.conf
@@ -92,8 +92,9 @@
 #   content_encoding = "gzip"
 
 [[outputs.kafka]]
+  name_override = "test"
   ## kafka brokers 的 URLs
-  brokers = ["192.168.100.21:9092"]
+  brokers = ["127.0.0.1:9092"]
   ## Kafka topic for producer messages
   topic = "throughputTest"
 
@@ -263,8 +264,3 @@
     unsigned = []
     boolean = []
     float = ["loop_b_load_percentage","loop_a_load_percentage","cooling_water_return_temperature","chilled_water_supply_temperature"]
-[[inputs.mqtt_consumer.topic_parsing]]
-  topic = "test/0/A"
-  measurement = "measurement/_/_"
-  [inputs.mqtt_consumer.topic_parsing.types]
-    test = "string"
