--- a/telegraf.conf
+++ b/telegraf.conf
@@ -96,7 +96,7 @@
   ## kafka brokers 的 URLs
   brokers = ["127.0.0.1:9092"]
   ## Kafka topic for producer messages
-  topic = "throughputTest"
+  topic = "realTimeData"
 
   ## 此标签的值将用作主题。如果没有设置 'topic'
   ## 选项被使用。
@@ -233,7 +233,7 @@
   servers = ["$MQTT_BROKER_URL"]
 
   topics = [
-    "/test/0/A",
+    "down/device/29/test/chiller_a",
   ]
   topic_tag = "topic"
 
@@ -250,7 +250,7 @@
   data_format = "json"
 
   json_name_key = "test"
-  tag_keys = ["topic","device_id"]
+  tag_keys = ["topic","device_id","tenant_id"]
   json_string_fields= ["loop_b_load_percentage","loop_a_load_percentage","cooling_water_return_temperature","chilled_water_supply_temperature"]
 
 # Convert values to another metric value type
@@ -260,7 +260,7 @@
     measurement = [""]
     tag = []
     string = []
-    integer = ["device_id"]
+    integer = ["device_id","tenant_id"]
     unsigned = []
     boolean = []
     float = ["loop_b_load_percentage","loop_a_load_percentage","cooling_water_return_temperature","chilled_water_supply_temperature"]
